<resources>
    <string name="app_name">MemberDirectory</string>
    <string name="member_directory">Member Directory</string>
    <string name="login">Login</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="no_acc_create_acc">No account yet? create one</string>
    <string name="copyrigth">Copyright 2019 SGSITS All Right Reserved</string>
    <string name="sgsits_logo">SGSITS_Logo</string>
    <string name="register_mem">Register Member</string>
    <string name="email_id">Email ID</string>
    <string name="mob_num">Mobile Number</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="register">Register</string>
    <string name="already_a_member">Already a  member? Login here</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save_changes">Save changes</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="logout">Logout</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="send_link">Send Link</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="current_activity">Current Activity</string>
    <string name="search">Search</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="share_app">Share App</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="notifications">Notifications</string>
    <string name="enter_your_email_id_and_follow_password_reset_link_from_the_mail">Enter your email id and follow password reset link from the mail</string>
    <string name="email_address">Email Address</string>
    <string name="other">Other</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="title">Title</string>
    <string name="domain">Domain</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="summary">Summary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="institute_name">Institute Name</string>
    <string name="degree_class">Degree/class</string>
    <string name="result">Result</string>
    <string name="position">Position</string>
    <string name="organisation">Organisation</string>
    <string name="my_profile">My Profile</string>


</resources>
