<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgotPasswordActivity"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email_id_and_follow_password_reset_link_from_the_mail"
            android:textSize="@dimen/text_size"
            android:layout_margin="@dimen/margin_xlarge"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_email_id"
            android:textSize="@dimen/text_size_large"
            android:layout_marginLeft="@dimen/margin_xxlarge"
            android:layout_marginRight="@dimen/margin_xxlarge"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send_link"
            android:padding="@dimen/padding_xlarge"
            android:layout_margin="@dimen/margin_xlarge"
            android:background="@drawable/round_button"
            android:textSize="@dimen/text_size_large"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>
    </LinearLayout>
</ScrollView>