<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ChangePasswordActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/oldPasswordTIL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:layout_marginLeft="@dimen/margin_xxlarge"
            android:layout_marginRight="@dimen/margin_xxlarge"
            android:inputType="textPassword"
            android:padding="@dimen/padding_large"
            android:background="@drawable/round_edittext"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPasswordTIL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:layout_marginLeft="@dimen/margin_xxlarge"
            android:layout_marginRight="@dimen/margin_xxlarge"
            android:inputType="textPassword"
            android:padding="@dimen/padding_large"
            android:background="@drawable/round_edittext"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/ConfirmPasswordTIL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password"
            android:layout_marginLeft="@dimen/margin_xxlarge"
            android:layout_marginRight="@dimen/margin_xxlarge"
            android:inputType="textPassword"
            android:padding="@dimen/padding_large"
            android:background="@drawable/round_edittext"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_xxlarge"
        android:text="Change Password"
        android:textSize="@dimen/text_size_xlarge"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/round_button"
        android:padding="@dimen/padding_xlarge"/>

</LinearLayout>